--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,7 +80,12 @@ dependencies {
 
     //datetime library dialog
     implementation "io.github.vanpra.compose-material-dialogs:datetime:0.8.1-rc"
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.6'
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.3'
+
+    //navigation
+    implementation "androidx.navigation:navigation-compose:2.6.0"
+    implementation "androidx.navigation:navigation-compose:2.4.0-alpha08"
+
 
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
