--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,7 +63,9 @@ dependencies {
     implementation 'androidx.compose.material3:material3'
     testImplementation 'junit:junit:4.13.2'
 
+    //hilt
     implementation 'com.google.dagger:hilt-android:2.44'
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
     kapt 'com.google.dagger:hilt-compiler:2.44'
 
 
